Replace with `Files.readString`